[tool.poetry]
name = "median-filter"
version = "0.1.1"
description = ""
authors = ["chwilko <bartekchwilkowski@gmail.com>"]
readme = "README.md"
packages = [{include = "median_filter"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
pytest = "^7.2.0"
scikit-learn = "^1.2.0"
isort = "^5.11.4"
black = "^22.12.0"
pylint = "^2.16.0"
scikit-image = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[settings]
multi_line_output=3
